Remove pattern from input

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </p>
       <div class="input-group">
         <h2 id="numero"></h2>
-        <input type="text" id="textInput" pattern="[A-Za-z\s-]+" />
+        <input type="text" id="textInput" />
       </div>
       <div class="output-group">
         <p id="output"></p>
