--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Números</title>
+    <title>Números con sustantivos</title>
     <link rel="stylesheet" href="style.css" />
     <script type="module">
       import { Numero } from './numero.js'
