Handle hundreds genders

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
   <body>
     <div class="container">
       <h1>Números con sustantivos</h1>
-      <p class="subhead">
-        Escriba las palabras enteras que corresponden al número, seguido del sustantivo indicado. Por ejemplo, “veintiún
-        elefantes”
-      </p>
+      <p class="subhead">Escriba las palabras enteras que corresponden al número, seguido del sustantivo indicado.</p>
       <div class="input-group">
         <h2 id="numero"></h2>
-        <input type="text" id="textInput" />
+        <input type="text" id="textInput" autocapitalize="off" placeholder="por ejemplo, veintiún elefantes" />
       </div>
       <div class="output-group">
         <p id="output"></p>
+      </div>
+      <div class="postscript">
+        <p>
+          Creado por <a href="https://bradfordfults.com">Bradford Fults</a> (<a href="https://github.com/h3h">@h3h</a>)
+        </p>
       </div>
     </div>
   </body>
