Allow manual number input

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       <h1>Números con sustantivos</h1>
       <p class="subhead">Escriba las palabras enteras que corresponden al número, seguido del sustantivo indicado.</p>
       <div class="input-group">
-        <h2 id="numero"></h2>
+        <h2 id="numeroSet">
+          <input type="text" id="numberInput" type="number" inputmode="numeric" />
+          <span id="numero"</span>
+        </h2>
         <input type="text" id="textInput" autocapitalize="off" placeholder="por ejemplo, veintiún elefantes" />
       </div>
       <div class="output-group">
