--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p class="subhead">Escriba las palabras enteras que corresponden al número, seguido del sustantivo indicado.</p>
       <div class="input-group">
         <h2 id="numeroSet">
-          <input type="text" id="numberInput" type="number" inputmode="numeric" />
+          <input type="text" id="numberInput" type="number" inputmode="numeric" max="99999999999" />
           <span id="numero"</span>
         </h2>
         <input type="text" id="textInput" autocapitalize="off" placeholder="por ejemplo, veintiún elefantes" />
